--- a/avance2-proyecto.tex
+++ b/avance2-proyecto.tex
@@ -352,7 +352,7 @@ Hay un dato con un Índice Commerce entre 40 y 50 con un total score correspondi
 
 \renewcommand{\arraystretch}{1.3}
 \begin{scriptsize}% latex table generated in R 4.4.2 by xtable 1.8-4 package
-% Tue May 13 17:33:19 2025
+% Wed May 14 10:22:28 2025
 \begin{longtable}{lrrrrrrrrrrr}
 \caption{Tabla de Frecuencia Bivariada Índice Commerce (A) vs Total Score (B)} \\ 
   \hline
@@ -467,7 +467,7 @@ En contraste, a medida que aumentan los valores tanto del Índice Research como 
 
 \renewcommand{\arraystretch}{1.3}
 \begin{scriptsize}% latex table generated in R 4.4.2 by xtable 1.8-4 package
-% Tue May 13 17:33:20 2025
+% Wed May 14 10:22:29 2025
 \begin{longtable}{lrrrrrrrrrrr}
 \caption{Tabla de Frecuencia Bivariada Índice Research (A) vs Total Score (B)} \\ 
   \hline
@@ -564,7 +564,7 @@ Intervalo & F.Absoluta & F.Relativa & F.Abs.Acum & F.Rel.Acum \\
 
 \renewcommand{\arraystretch}{1.3}
 \begin{scriptsize}% latex table generated in R 4.4.2 by xtable 1.8-4 package
-% Tue May 13 17:33:20 2025
+% Wed May 14 10:22:29 2025
 \begin{longtable}{lrrrrrrrrrrr}
 \caption{Tabla de Frecuencia Bivariada Índice Talent (A) vs Total Score (B)} \\ 
   \hline
@@ -606,19 +606,27 @@ Figura 9. Distribución acumulada del Índice Talent agrupado por Región.
 
 \section{Intérvalos de confianza}
 
-Al obtener una muestra aleatoria del índice Research (variable cuantitativa) y determinar la media de la muestra y la desviación estándar, es necesario establecer el intérvalo de confianza donde se encuentra la media real de la población.
+Al obtener una muestra aleatoria del índice Research (variable cuantitativa) con 30 datos y determinar la media de la muestra y la desviación estándar, es necesario establecer el intérvalo de confianza donde se encuentra la media real de la población.
 
 Para obtener un intérvalo de confianza del 95\% se realizó el siguiente procedimiento:
 
+
+
+
+n = 30\\
 x̄ = 16.61\\
+s = 10.89\\
 IC = 0.95\\
 IC = 1 - $\alpha$\\
 $\alpha$ = 0.05\\
 $\alpha$/2 = 0.025\\
 Z~$\alpha$/2~ = ± 1.96\\
-IC = (14.65,  18.57)\\
+Márgen de error = Z~$\alpha$/2~ * s/√n\\
+Márgen de error = 1.96 * 10.89/√30\\
+IC = (x̄ ± Márgen de error\\
+IC = (12.71,  20.51)\\
 
-El intérvalo presentado indica que con una probabilidad del 95\%, la media de la población se encuentra entre 14.65 y 14.65.
+El intérvalo presentado indica que con una probabilidad del 95\%, la media de la población se encuentra entre 12.71 y 20.51.
 
 ESPACIO PARA VARIABLE CUALITATIVA (seguir el mismo formato)
 
@@ -632,7 +640,7 @@ A continuación se presenta la prueba de hipótesis siguiendo el método del val
 
 n = 30\\
 x̄ = 16.61\\
-s =  10.8946711\\
+s =  10.89\\
 
 Paso 1.\\
 Ho: µ $≤$ 20\\
@@ -643,8 +651,8 @@ $\alpha$ = 0.05
 
 Paso 3.\\
 Z = (x̄ - µ)/(s/√n)\\
-Z = ( 16.61 - 20)/(10.8946711/√30)\\
-Z = -1.7043006\\
+Z = ( 16.61 - 20)/(10.89/√30)\\
+Z = -1.7050317\\
 
 Paso 4.
 
@@ -662,7 +670,7 @@ Figura 10. Identificación de la región de rechazo
 
 Paso 5.
 
-Con un nivel de significancia de 0.05, se concluye que el valor medio del índice Research es menor o igual a 20 puntos, ya que no se rechaza la hipótesis nula Ho: µ $≤$ 20 debido a que Z = -1.7043006 se encuentra en la región de no rechazo (región a la izquierda de Z crítico = 1.6448536) como se aprecia en la figura 10.
+Con un nivel de significancia de 0.05, se concluye que el valor medio del índice Research es menor o igual a 20 puntos, ya que no se rechaza la hipótesis nula Ho: µ $≤$ 20 debido a que Z = -1.7050317 se encuentra en la región de no rechazo (región a la izquierda de Z crítico = 1.6448536) como se aprecia en la figura 10.
 
 ESPACIO PARA VARIABLE CUALITATIVA (seguir el mismo formato)
 
