--- a/avance2-proyecto.Rmd
+++ b/avance2-proyecto.Rmd
@@ -1484,7 +1484,15 @@ ggsave("figura13.png", plot = histograma_simple, width = 8, height = 6, dpi = 30
 
 Figura 13. Distribución los residuos de los pronósticos de Total Score.
 
-Teniendo en cuenta los resultados de la comprobación de los supuestos, en primera instancia, se observa gráficamente y se identifica a través del coeficiente de correlación lineal de Pearson que hay una relación lineal muy significativa de `r cResearch` entre las variables índice Research y total socore. Por otro lado, la bondad del modelo medida por el coeficiente de determinación es de `r Raj`, valor que brinda una alta confiabilidad a las predicciones del modelo, indicando que el `r rp`\% de la variabilidad de las predicciones de Total Score pueden ser explicadas con el modelo de regresión con la variable Research. Finalmente debido al cumplimiento de los supuestos probado anteriormente, puede considerarse fiable pronosticar con el modelo construido.
+```{r min_max}
+
+minc <- min(datos$Commercial)
+maxc <- max(datos$Commercial)
+
+```
+
+
+Con el fin de comprobar la fiabilidad del modelo, en primera instancia, se observa gráficamente en la Figura 11 y se identifica a través del coeficiente de correlación lineal de Pearson que hay una relación lineal muy significativa de `r cResearch` entre las variables índice Research y Total Score. Por otro lado, la bondad del modelo medida por el coeficiente de determinación es de `r Raj`, valor que brinda una alta confiabilidad a las predicciones del modelo, indicando que el `r rp`\% de la variabilidad de las predicciones de Total Score pueden ser explicadas con el modelo de regresión lineal mediante la variable Research. Es necesario considerar que las predicciones de un modelo solo son válidas dentro del rango de la muestra estudiada, en este caso, esta corresponde a (`r minc` - `r maxc`). Debido a que el rango de las muestras coincide con el rango de los resultados posibles (0 - 100), es válido realizar predicciones  para Total Score con cualquier valor del índice Research. Finalmente debido al cumplimiento de los supuestos probado anteriormente, puede considerarse fiable pronosticar con el modelo construido.
 
 ESPACIO PARA MODELO DE REGRESIÓN LINEAL MÚLTIPLE (seguir mismo formato)
 
