--- a/avance2-proyecto.Rmd
+++ b/avance2-proyecto.Rmd
@@ -333,7 +333,7 @@ Americas presentan los rangos más amplios de todas las regiones que van desde 8
 
 Con respecto al coeeficiente de variación se puede afirmar que para la mayoría de los casos los datos son heterogéneos al presentar un coeficiente > a 50, sin embargo, el índice Talent y Total Score en Europe presentan variación significativa ya que el CV se encuentra en el rango de 10 a 50.
 
-En el caso de la covarianza, esta es positiva para todas las variables, lo cuál plantea la posibilidad de que estas tengan una relación lineal directa con el índice Total Score. Esto es confirmado con el coeficiente de correlación de Pearson, donde un valor superior a 0.8 indica hay una relación muy significativa, lo cuál es cierto para todos los indicadores en Americas y Middle East, Research en Asia-Pacific y Talent y Research en Europe. Por otro lado, una coeficiente entre 0.6 y 0.8 indica una relación significativa, la cuál está presente en Europe para Commerce y en Africa para Talent y Research.
+En el caso de la covarianza, esta es positiva para todas las variables, lo cuál plantea la posibilidad de una relación lineal directa con el índice Total Score. Esto es confirmado con el coeficiente de correlación lineal de Pearson, donde un valor superior a 0.8 indica hay una relación muy significativa, lo cuál es cierto para todos los indicadores en Americas y Middle East, Research en Asia-Pacific, Talent y Research en Europe. Por otro lado, una coeficiente entre 0.6 y 0.8 indica una relación significativa, la cuál está presente en Europe para Commerce y en Africa para Talent y Research.
 
 
 \end{multicols}
@@ -365,9 +365,9 @@ cat("\\renewcommand{\\arraystretch}{1}\n")
 
 \subsection{Índice Commerce}
 
-El indicador Commerce evalúa la capacidad de los países para convertir el conocimiento de IA en aplicaciones comerciales y soluciones de mercado. La Tabla 4 presenta la distribución global de este indicador en intervalos de 10 puntos, mostrando las frecuencias absolutas y relativas de países en cada rango. Este análisis es clave para identificar las economías líderes en la comercialización de tecnologías de IA y qué regiones necesitan fortalecer sus ecosistemas de innovación empresarial.
+El indicador Commerce evalúa la capacidad de los países para convertir el conocimiento de IA en aplicaciones comerciales. La Tabla 5 presenta la distribución del indicador en intervalos de 10 puntos, mostrando las frecuencias absolutas y relativas de países en por rango. Este análisis es clave para identificar las economías líderes en la comercialización de tecnologías de IA y qué regiones necesitan fortalecer sus ecosistemas de innovación empresarial.
 
-La Tabla 5 revela una concentración extrema en la capacidad comercial, con más del 65\% de los países ubicados por debajo de los 20 puntos (F.Rel.A = 0.65). Solo un pequeño grupo de naciones, liderado por Estados Unidos (100 puntos), supera los 80 puntos, demostrando su dominio en la transformación de investigación en productos comerciales. Los resultados destacan la brecha entre los polos tecnológicos consolidados y el resto del mundo, particularmente en regiones como África y Latinoamérica.
+La Tabla 5 revela una concentración extrema en la capacidad comercial, con más del 65\% de los países ubicados por debajo de los 20 puntos (F.Rel.A = 0.65). Solo un pequeño grupo de naciones, liderado por Estados Unidos (100), supera los 80 puntos, demostrando su dominio en la transformación de investigación en productos comerciales. Los resultados destacan la brecha entre los polos tecnológicos consolidados y el resto del mundo, particularmente en regiones como África.
 
 \end{multicols}
 
@@ -1071,8 +1071,9 @@ Para obtener un intérvalo de confianza del 95\% se realizó el siguiente proced
 ```{r margen de error, include=FALSE}
 
 zalfa2 <- round(abs(qnorm(0.025)), 3)
-m1 <- round((mResearch - zalfa2 * dResearch/sqrt(30)), 2)
-m2 <- round((mResearch + zalfa2 * dResearch/sqrt(30)), 2)
+mg <- zalfa2 * dResearch/sqrt(30)
+m1 <- round((mResearch - mg), 2)
+m2 <- round((mResearch + mg), 2)
 
 ```
 
@@ -1087,6 +1088,7 @@ $\alpha$/2 = 0.025\\
 Z~$\alpha$/2~ = ± `r zalfa2`\\
 Márgen de error = Z~$\alpha$/2~ * s/√n\\
 Márgen de error = `r zalfa2` * `r dResearch`/√30\\
+Márgen de error = `r mg`\\
 IC = (x̄ ± Márgen de error)\\
 IC = (`r m1`,  `r m2`)\\
 
@@ -1116,7 +1118,7 @@ Ho: µ $≤$ 20\\
 Ha: µ > 20\\
 
 Paso 2.\\
-$\alpha$ = 0.05
+$\alpha$ = 0.05\\
 
 Paso 3.\\
 Z = (x̄ - µ)/(s/√n)\\
@@ -1318,8 +1320,8 @@ p <- format.pval(p_value, digits = 4)
 
 $R^2$ = `r rc`\\
 $R^2_{A}$ = `r ra`\\
-Estadístico F = `rf` con `r f1` y `r f2` grados de libertad\\
-Valor p = `r p`
+Estadístico F = `r f` con `r f1` y `r f2` grados de libertad\\
+Valor p = `r p`\\
 
 Hay 4 supuestos respecto a $\epsilon$ [6] del modelo de regrersión lineal que se deben cumplir para verificar la validez de las predicciones del modelo, estos supuestos son: 
 
