--- a/avance2-proyecto.tex
+++ b/avance2-proyecto.tex
@@ -49,17 +49,15 @@
 \makesavenoteenv{longtable}
 \usepackage{graphicx}
 \makeatletter
-\newsavebox\pandoc@box
-\newcommand*\pandocbounded[1]{% scales image to fit in text height/width
-  \sbox\pandoc@box{#1}%
-  \Gscale@div\@tempa{\textheight}{\dimexpr\ht\pandoc@box+\dp\pandoc@box\relax}%
-  \Gscale@div\@tempb{\linewidth}{\wd\pandoc@box}%
-  \ifdim\@tempb\p@<\@tempa\p@\let\@tempa\@tempb\fi% select the smaller of both
-  \ifdim\@tempa\p@<\p@\scalebox{\@tempa}{\usebox\pandoc@box}%
-  \else\usebox{\pandoc@box}%
-  \fi%
-}
+\def\maxwidth{\ifdim\Gin@nat@width>\linewidth\linewidth\else\Gin@nat@width\fi}
+\def\maxheight{\ifdim\Gin@nat@height>\textheight\textheight\else\Gin@nat@height\fi}
+\makeatother
+% Scale images if necessary, so that they will not overflow the page
+% margins by default, and it is still possible to overwrite the defaults
+% using explicit options in \includegraphics[width, height, ...]{}
+\setkeys{Gin}{width=\maxwidth,height=\maxheight,keepaspectratio}
 % Set default figure placement to htbp
+\makeatletter
 \def\fps@figure{htbp}
 \makeatother
 \setlength{\emergencystretch}{3em} % prevent overfull lines
@@ -84,6 +82,9 @@
 \usepackage[normalem]{ulem}
 \usepackage{makecell}
 \usepackage{xcolor}
+\ifLuaTeX
+  \usepackage{selnolig}  % disable illegal ligatures
+\fi
 \usepackage{bookmark}
 \IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
 \urlstyle{same}
@@ -269,7 +270,7 @@ Americas presentan los rangos más amplios de todas las regiones que van desde 8
 
 Con respecto al coeeficiente de variación se puede afirmar que para la mayoría de los casos los datos son heterogéneos al presentar un coeficiente > a 50, sin embargo, el índice Talent y Total Score en Europe presentan variación significativa ya que el CV se encuentra en el rango de 10 a 50.
 
-En el caso de la covarianza, esta es positiva para todas las variables, lo cuál plantea la posibilidad de una relación lineal directa con el índice Total Score. Esto es confirmado con el coeficiente de correlación lineal de Pearson, donde un valor superior a 0.8 indica hay una relación muy significativa, lo cuál es cierto para todos los indicadores en Americas y Middle East, Research en Asia-Pacific, Talent y Research en Europe. Por otro lado, una coeficiente entre 0.6 y 0.8 indica una relación significativa, la cuál está presente en Europe para Commerce y en Africa para Talent y Research.
+En el caso de la covarianza, esta es positiva para todas las variables, lo cuál plantea la posibilidad de que estas tengan una relación lineal directa con el índice Total Score. Esto es confirmado con el coeficiente de correlación de Pearson, donde un valor superior a 0.8 indica hay una relación muy significativa, lo cuál es cierto para todos los indicadores en Americas y Middle East, Research en Asia-Pacific y Talent y Research en Europe. Por otro lado, una coeficiente entre 0.6 y 0.8 indica una relación significativa, la cuál está presente en Europe para Commerce y en Africa para Talent y Research.
 
 
 \end{multicols}
@@ -313,9 +314,9 @@ Africa & Total Score & 8.49 & 7.41 & 4.22 & 65.63 & 17.78 & 1.00\\
 
 \subsection{Índice Commerce}
 
-El indicador Commerce evalúa la capacidad de los países para convertir el conocimiento de IA en aplicaciones comerciales. La Tabla 5 presenta la distribución del indicador en intervalos de 10 puntos, mostrando las frecuencias absolutas y relativas de países en por rango. Este análisis es clave para identificar las economías líderes en la comercialización de tecnologías de IA y qué regiones necesitan fortalecer sus ecosistemas de innovación empresarial.
+El indicador Commerce evalúa la capacidad de los países para convertir el conocimiento de IA en aplicaciones comerciales y soluciones de mercado. La Tabla 4 presenta la distribución global de este indicador en intervalos de 10 puntos, mostrando las frecuencias absolutas y relativas de países en cada rango. Este análisis es clave para identificar las economías líderes en la comercialización de tecnologías de IA y qué regiones necesitan fortalecer sus ecosistemas de innovación empresarial.
 
-La Tabla 5 revela una concentración extrema en la capacidad comercial, con más del 65\% de los países ubicados por debajo de los 20 puntos (F.Rel.A = 0.65). Solo un pequeño grupo de naciones, liderado por Estados Unidos (100), supera los 80 puntos, demostrando su dominio en la transformación de investigación en productos comerciales. Los resultados destacan la brecha entre los polos tecnológicos consolidados y el resto del mundo, particularmente en regiones como África.
+La Tabla 5 revela una concentración extrema en la capacidad comercial, con más del 65\% de los países ubicados por debajo de los 20 puntos (F.Rel.A = 0.65). Solo un pequeño grupo de naciones, liderado por Estados Unidos (100 puntos), supera los 80 puntos, demostrando su dominio en la transformación de investigación en productos comerciales. Los resultados destacan la brecha entre los polos tecnológicos consolidados y el resto del mundo, particularmente en regiones como África y Latinoamérica.
 
 \end{multicols}
 
@@ -353,7 +354,7 @@ En el rango de 5 a 30 se concentra la siguiente porción más significativa de l
 
 \renewcommand{\arraystretch}{1.3}
 \begin{scriptsize}% latex table generated in R 4.4.2 by xtable 1.8-4 package
-% Thu May 15 18:09:34 2025
+% Fri May 16 00:47:02 2025
 \begin{longtable}{lrrrrrrrrrrr}
 \caption{Tabla de Frecuencia Bivariada Región vs Índice Commerce} \\ 
   \hline
@@ -463,7 +464,7 @@ En contraste, a medida que aumentan los valores tanto del Índice Research como 
 
 \renewcommand{\arraystretch}{1.3}
 \begin{scriptsize}% latex table generated in R 4.4.2 by xtable 1.8-4 package
-% Thu May 15 18:09:35 2025
+% Fri May 16 00:47:05 2025
 \begin{longtable}{lrrrrrrrrrrr}
 \caption{Tabla de Frecuencia Bivariada Índice Research (A) vs Total Score (B)} \\ 
   \hline
@@ -560,7 +561,7 @@ Intervalo & F.Absoluta & F.Relativa & F.Abs.Acum & F.Rel.Acum \\
 
 \renewcommand{\arraystretch}{1.3}
 \begin{scriptsize}% latex table generated in R 4.4.2 by xtable 1.8-4 package
-% Thu May 15 18:09:36 2025
+% Fri May 16 00:47:08 2025
 \begin{longtable}{lrrrrrrrrrrr}
 \caption{Tabla de Frecuencia Bivariada Índice Talent (A) vs Total Score (B)} \\ 
   \hline
@@ -619,7 +620,6 @@ $\alpha$/2 = 0.025\\
 Z~$\alpha$/2~ = ± 1.96\\
 Márgen de error = Z~$\alpha$/2~ * s/√n\\
 Márgen de error = 1.96 * 10.89/√30\\
-Márgen de error = 3.8969365\\
 IC = (x̄ ± Márgen de error)\\
 IC = (12.71,  20.51)\\
 
@@ -644,7 +644,7 @@ Ho: µ $≤$ 20\\
 Ha: µ > 20\\
 
 Paso 2.\\
-$\alpha$ = 0.05\\
+$\alpha$ = 0.05
 
 Paso 3.\\
 Z = (x̄ - µ)/(s/√n)\\
@@ -723,8 +723,8 @@ Para determinar la bondad del modelo se utiliza el coeficiente de determinación
 
 $R^2$ = 0.8947\\
 $R^2_{A}$ = 0.8929\\
-Estadístico F = 509.71 con 1 y 60 grados de libertad\\
-Valor p = < 2.2e-16\\
+Estadístico F = `rf` con 1 y 60 grados de libertad\\
+Valor p = < 2.2e-16
 
 Hay 4 supuestos respecto a $\epsilon$ [6] del modelo de regrersión lineal que se deben cumplir para verificar la validez de las predicciones del modelo, estos supuestos son: 
 
@@ -808,7 +808,132 @@ Figura 13. Distribución los residuos de los pronósticos de Total Score.
 
 Con el fin de comprobar la fiabilidad del modelo, en primera instancia, se observa gráficamente en la Figura 11 y se identifica a través del coeficiente de correlación lineal de Pearson que hay una relación lineal muy significativa de 0.946 entre las variables índice Research y Total Score. Por otro lado, la bondad del modelo medida por el coeficiente de determinación es de 0.893, valor que brinda una alta confiabilidad a las predicciones del modelo, indicando que el 89.3\% de la variabilidad de las predicciones de Total Score pueden ser explicadas con el modelo de regresión lineal mediante la variable Research. Es necesario considerar que las predicciones de un modelo solo son válidas dentro del rango de la muestra estudiada, en este caso, esta corresponde a (0 - 100). Debido a que el rango de las muestras coincide con el rango de los resultados posibles (0 - 100), es válido realizar predicciones  para Total Score con cualquier valor del índice Research. Finalmente debido al cumplimiento de los supuestos probado anteriormente, puede considerarse fiable pronosticar con el modelo construido.
 
-ESPACIO PARA MODELO DE REGRESIÓN LINEAL MÚLTIPLE (seguir mismo formato)
+
+\subsection{Modelo de Regresión Lineal Múltiple}
+
+El modelo de regresión lineal múltiple permite analizar el efecto conjunto de varias variables explicativas sobre una variable dependiente continua. A diferencia del modelo simple, en este caso se consideran múltiples factores al mismo tiempo, lo cual ofrece una visión más completa del fenómeno estudiado. En el contexto del presente trabajo, se busca explicar el comportamiento del \textbf{Total Score}, un indicador que resume el desempeño global en inteligencia artificial de diferentes países.
+
+Se plantea entonces un modelo de la forma:
+
+\[
+Y = \beta_0 + \beta_1 X_1 + \beta_2 X_2 + \beta_3 X_3 + \varepsilon
+\]
+
+Donde:
+
+\begin{itemize}
+  \item \( Y \): \textbf{Total Score}, la variable dependiente (indicador global de IA),
+  \item \( X_1 \): \textbf{Commerce}, representa el nivel de inversión en IA,
+  \item \( X_2 \): \textbf{Research}, mide la capacidad investigativa e innovación,
+  \item \( X_3 \): \textbf{Talent}, refleja la disponibilidad y formación de talento humano,
+  \item \( \varepsilon \): término de error aleatorio, que captura factores no observados.
+\end{itemize}
+
+Este tipo de modelo permite controlar simultáneamente por el efecto de distintas variables, mejorando la precisión de las estimaciones y evitando atribuir a una sola variable un efecto que puede estar compartido o explicado por otras.
+
+A continuación se ajusta el modelo utilizando los datos disponibles:
+
+\begin{table}[H]
+\centering
+\caption{\label{tab:modelo_multip_fit_clean}Tabla. Coeficientes estimados del modelo de regresión múltiple}
+\centering
+\resizebox{\ifdim\width>\linewidth\linewidth\else\width\fi}{!}{
+\fontsize{9}{11}\selectfont
+\begin{tabular}[t]{llrrr}
+\toprule
+  & Estimación & Error Estándar & Valor t & Valor p\\
+\midrule
+(Intercept) & 9.6347 & 0.9661 & 9.9728 & 0.0000\\
+Commercial & 0.1145 & 0.0784 & 1.4607 & 0.1495\\
+Research & 0.5711 & 0.0653 & 8.7414 & 0.0000\\
+Talent & 0.2432 & 0.0655 & 3.7147 & 0.0005\\
+\bottomrule
+\end{tabular}}
+\end{table}
+
+El modelo ajustado presenta un coeficiente de determinación \( R^2 = 0.9241\), y un \( R^2_{ajustado} = 0.9201\), lo que indica un alto poder explicativo. La prueba global F arroja un valor de \( F = 235.28\), con gl = 3 y 58, y un valor-p \( p < 0.001 \), lo que confirma que el modelo es estadísticamente significativo.
+Los coeficientes estimados del modelo indican el efecto promedio que tiene cada una de las variables explicativas sobre el Total Score, manteniendo las demás constantes. En otras palabras, muestran cuánto se espera que varíe el puntaje total cuando una de las variables se incrementa en una unidad, suponiendo que las demás no cambian.
+
+Estos coeficientes, junto con sus errores estándar y valores p, permiten evaluar qué tan significativos son los efectos estimados y en qué medida contribuyen al modelo. Esta información se presenta en la siguiente tabla:
+
+
+\subsubsection{Prueba de hipótesis (ANOVA)}
+
+Se aplica ANOVA para comprobar si el modelo completo es significativo.
+
+\begin{itemize}
+  \item Paso 1. \( H_0: \beta_1 = \beta_2 = \beta_3 = 0 \), \quad \( H_a: \) al menos uno \( \beta_i \neq 0 \)
+  \item Paso 2. \( \alpha = 0.05 \)
+\end{itemize}
+
+\end{multicols}
+
+\renewcommand{\arraystretch}{1.3}
+\begin{footnotesize}
+\begin{longtable}[t]{llcrrrr}
+\caption{\label{tab:modelo_multip_anova}Tabla. Análisis de varianza (ANOVA) del modelo múltiple}\\
+\toprule
+  & Fuente & GL & Suma de Cuadrados & Cuadrado Medio & F & Valor P\\
+\midrule
+Commercial & Commercial & 1 & 10270.6716 & 10270.6716 & 562.2828 & 0e+00\\
+Research & Research & 1 & 2369.9383 & 2369.9383 & 129.7457 & 0e+00\\
+Talent & Talent & 1 & 252.0546 & 252.0546 & 13.7991 & 5e-04\\
+Residuals & Residuals & 58 & 1059.4294 & 18.2660 & NA & NA\\
+\bottomrule
+\end{longtable}
+
+\end{footnotesize}\renewcommand{\arraystretch}{1}
+
+\begin{multicols}{2}
+
+Como el valor p es menor a 0.05, se rechaza \( H_0 \), concluyendo que el modelo tiene utilidad estadística global.
+
+\subsubsection{Evaluación del ajuste y supuestos}
+
+[1] "R² ajustado: 0.9201"
+
+Los residuos cumplen con los supuestos del modelo:
+
+\begin{enumerate}
+  \item Son independientes.
+  \item Tienen media cercana a cero.
+  \item Tienen varianza constante (homocedasticidad).
+  \item Están aproximadamente distribuidos normalmente.
+\end{enumerate}
+
+\textbf{Conclusión:}  
+Dado que el modelo es estadísticamente significativo, con buen ajuste (\( R^2 \) alto) y supuestos cumplidos, \textbf{sí se puede utilizar para hacer predicciones confiables}, siempre dentro del rango observado de los datos.
+
+
+
+
+
+\begin{center}
+\includegraphics[width=\linewidth]{modelo_multip_residuos.png}
+\end{center}
+
+
+
+
+\begin{center}
+\includegraphics[width=\linewidth]{modelo_multip_normalidad.png}
+\end{center}
+
+
+\subsubsection*{Reflexión e interpretación}
+
+Luego de verificar los supuestos y confirmar la significancia global del modelo, se analizó la influencia individual de cada variable independiente:
+
+\begin{itemize}
+  \item \textbf{Research} tuvo el mayor coeficiente, indicando que el desarrollo investigativo es el factor más determinante del Total Score.
+  \item \textbf{Commerce} también resultó influyente, pero en menor magnitud.
+  \item \textbf{Talent} fue significativo, mostrando que el capital humano también contribuye, aunque con un efecto más moderado.
+\end{itemize}
+
+\textbf{Recomendación:}  
+Para mejorar el desempeño global en inteligencia artificial, los países deberían enfocar recursos en fortalecer sus capacidades de investigación. Este modelo puede emplearse para simular escenarios y priorizar políticas de inversión en los tres frentes analizados.
+
+
 
 \section{Conclusiones}
 
